tests/build/fail/widget_new/malformed_property_path4.stderr
error: expected identifier
 --> $DIR/malformed_property_path4.rs:5:31
  |
5 |         zero_ui::properties:: = 0;
  |                               ^
